[project]
name = "earthquake-ai"
version = "0.1.0"
description = "AI Earthquake Watcher"
dependencies = [
    "streamlit",
    "requests",
    "pandas",
    "folium",
    "streamlit-folium"
]

[project.scripts]
# นี่คือส่วนที่แก้ Error 'No python entrypoint found'
app = "app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
